--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,17 +34,41 @@ body {
     background-size: cover;
 }
 
+@media (max-width: 650px) {
+    .container {
+        background-image: none;
+        background-color: #D9E6E7;
+    }
+}
+
 .container .cuerpo {
     max-width: 550px;
     margin: 0 auto;
+    padding: 50px;
 }
 
-.container .cuerpo .logo {
+.container .cuerpo .logo.desk {
     max-width: 130px;
     text-align: center;
-    padding: 150px 0 100px;
+    padding: 50px 0 100px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.container .cuerpo .logo.mov {
+    display: none;
+}
+
+@media (max-width: 650px) {
+    .container .cuerpo .logo.desk {
+        display: none;
+    }
+    .container .cuerpo .logo.mov {
+        display: block;
+        width: 80px;
+        margin: 0 auto;
+        padding: 50px 0 100px;
+    }
 }
 
 .container .cuerpo .body p {
@@ -53,8 +77,66 @@ body {
     line-height: 1.6;
 }
 
+@media (max-width: 650px) {
+    .container .cuerpo .body p {
+        text-align: left;
+    }
+}
+
 .container .cuerpo form {
     text-align: center;
-    margin-top: 150px;
-    padding-bottom: 150px;
+    margin-top: 100px;
+    padding-bottom: 100px;
+}
+
+.container .cuerpo form input {
+    height: 40px;
+    padding: 5px 15px;
+    box-sizing: border-box;
+    outline: none;
+    border: solid 1px black;
+}
+
+.container .cuerpo form input.email {
+    max-width: 350px;
+    width: 600px;
+    border-right: none;
+}
+
+@media (max-width: 650px) {
+    .container .cuerpo form input.email {
+        max-width: 350px;
+        width: 200px;
+    }
+}
+
+@media (max-width: 430px) {
+    .container .cuerpo form input.email {
+        max-width: 350px;
+        width: 200px;
+        border-right: solid 1px black;
+    }
+    .container .cuerpo form input.submit {
+        margin-left: 0 !important;
+        margin-top: 10px;
+        max-width: 350px;
+        width: 200px;
+    }
+}
+
+.container .cuerpo form input.submit {
+    margin-left: -5px;
+    background-color: #D9E6E7;
+}
+
+.container .cuerpo .social {
+    width: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding-bottom: 50px;
+}
+.container .cuerpo .social img {
+    height: 22px;
 }
