--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,9 @@ body {
     box-sizing: border-box;
     outline: none;
     border: solid 1px black;
+    border-radius: 0 !important;
+    border-style: solid;
+    -webkit-appearance: none;
 }
 
 .container .cuerpo form input.email {
